data/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-ingress
  namespace: data
  annotations:
  
spec:
  rules:
  - host: data.dashboard
    http:
      paths:
      - path: /minio
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              name: minio-console
  - host: data.api.minio
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              name: minio-api
